--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
   "scripts": {
     "preinstall": "npx only-allow pnpm",
     "prepare": "husky install && node scripts/generate-nutui.cjs && node scripts/generate-nutui-taro-vue.cjs && node ./scripts/generate-taro-route.cjs",
-    "dev": "vite --open --force",
+    "dev": "nvm use 18.18.2 && vite --open --force",
     "dev:h5": "pnpm --dir ./packages/nutui-taro-demo dev h5",
     "dev:weapp": "pnpm --dir ./packages/nutui-taro-demo dev weapp",
     "dev:taro": "pnpm --dir ./packages/nutui-taro-demo dev",
