--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@nutui/nutui",
-  "version": "4.2.2",
+  "name": "@cola639/nutui",
+  "version": "4.2.3",
   "description": "京东风格的轻量级移动端 Vue2、Vue3 组件库（支持小程序开发）",
   "main": "dist/nutui.umd.js",
   "module": "dist/nutui.es.js",
@@ -22,7 +22,7 @@
     "jdc",
     "jdcfe"
   ],
-  "author": "jdcfe",
+  "author": "cola639",
   "license": "MIT",
   "publishConfig": {
     "access": "public",
@@ -38,7 +38,7 @@
   "scripts": {
     "preinstall": "npx only-allow pnpm",
     "prepare": "husky install && node scripts/generate-nutui.cjs && node scripts/generate-nutui-taro-vue.cjs && node ./scripts/generate-taro-route.cjs",
-    "dev": "nvm use 18.18.2 && vite --open --force",
+    "dev": "vite --open --force",
     "dev:h5": "pnpm --dir ./packages/nutui-taro-demo dev h5",
     "dev:weapp": "pnpm --dir ./packages/nutui-taro-demo dev weapp",
     "dev:taro": "pnpm --dir ./packages/nutui-taro-demo dev",
@@ -109,9 +109,10 @@
     "vite-plugin-inspect": "^0.7.42"
   },
   "engines": {
-    "pnpm": ">= 8.0.0"
+    "pnpm": ">= 8.0.0",
+    "node": ">=16"
   },
-  "lint-staged": {
+ "lint-staged": {
     "*.{ts,tsx,js,jsx,vue,scss,md}": "prettier --write",
     "*.{ts,tsx,js,jsx,vue}": "eslint --fix"
   },
